# upstage-stock-agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  EC2_DEPLOY_GUIDE.md  EC2_QUICK_DEPLOY.md  EC2_READY.md  README.md  SETUP_GUIDE.md  START_HERE.md  TESTING.md  check_setup.bat  debug_news_clean.txt  debug_news_raw.txt  deploy.sh  docker-compose.yml  ec2-local-build.sh  integrated_test.py  main.py  main_test.py  pyproject.toml  quick_test.sh  rag_main.py  requirements.txt  run.sh  setup_and_run.sh  setup_venv.sh  start.bat  start.sh  start_docker.bat  start_docker.sh  stop.sh  stop_docker.bat  stop_docker.sh  test_api.sh  test_docker.sh  test_local.sh  test_stop.sh  (+1 more)
.github/workflows/: deploy.yml
app/: test.py
app/agents/: base_agent.py  chart_agent.py  finance_agent.py  judge_agent.py  moderator_agent.py  news_agent.py  report_agent.py  ticker_agent.py  validator_agent.py
app/api/: auth.py  chat.py  history.py  moderator_router.py
app/core/: database.py
app/graph/: state.py
app/models/: history.py  user.py
app/repository/: chroma_db.py  retriever.py
app/service/: chart_collector.py  dart_collector.py  debate_manager.py  finance_collector.py  news_collector.py  orchestrator.py  stock_ingestor.py  stock_service.py  ticker_resolver.py
app/tools/: chart_tools.py  finace_tools.py  (+2 more)
evaluate/: compare_agent.py  compare_with_debate.py  evaluate_test.py  post_char_tool.py  post_finance_tool.py  post_search_tool.py
tests/: ingest.py  test_agent_talk.py  test_full_pipeline.py  test_multi_stock.py  test_vector_search.py
(+38 files in other folders)
